--- a/Exercises/Exercise-01-Input-For-While.ipynb
+++ b/Exercises/Exercise-01-Input-For-While.ipynb
@@ -44,19 +44,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 km^2 = 100000000000000.0 mm^2\n"
+      "1 km^3 = 1e+18 mm^3\n"
      ]
     }
    ],
    "source": [
-    "startQuantity = int(input(\"Input a quantity: \"))\n",
+    "startQuantity = float(input(\"Input a quantity: \"))\n",
     "\n",
     "measurementList = [\"\", \"length\", \"area\", \"volume\"]\n",
     "measurementChoice = input(\"Select either length, area or volume: \")\n",
@@ -70,11 +70,12 @@
     "\n",
     "startPrefix = startUnit[-2::-1]\n",
     "endPrefix = endUnit[-2::-1]\n",
+    "baseUnit = startUnit[1:]\n",
     "\n",
     "baseQuantity = startQuantity * (conversionValues[prefixList.index(startPrefix)] ** measurementList.index(measurementChoice))\n",
     "endQuantity = baseQuantity / (conversionValues[prefixList.index(endPrefix)] ** measurementList.index(measurementChoice))\n",
     "\n",
-    "print(f\"{startQuantity} {startPrefix}m^{measurementList.index(measurementChoice)} = {endQuantity} {endPrefix}m^{measurementList.index(measurementChoice)}\")"
+    "print(f\"{startQuantity} {startPrefix}{baseUnit}^{measurementList.index(measurementChoice)} = {endQuantity} {endPrefix}{baseUnit}^{measurementList.index(measurementChoice)}\")"
    ]
   },
   {
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +189,7 @@
    ],
    "source": [
     "first_term = float(input(\"Please input the first term in the arithmetic sequence:\\n\"))\n",
-    "common_difference = float(input(\"Please inpnut the common difference:\\n\"))\n",
+    "common_difference = float(input(\"Please input the common difference:\\n\"))\n",
     "n = int(input(\"Please input the index:\\n\"))\n",
     "total = 0\n",
     "first_term -= common_difference\n",
@@ -212,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -228,9 +229,7 @@
     "n = 0\n",
     "while total < 1700:\n",
     "    n += 3\n",
-    "    total = 0\n",
-    "    for i in range(3, n+1, 3):\n",
-    "        total += 3 * i - 1\n",
+    "    total += 3 * n - 1\n",
     "print(n)"
    ]
   },
@@ -247,14 +246,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mrs A's account first became greater than $5000 on 1 May 2001\n"
+      "Mrs A's account first became greater than $5000 on 1 December 2002\n"
      ]
     }
    ],
@@ -266,11 +265,42 @@
     "    balance += addition\n",
     "    addition += 10\n",
     "    monthCount += 1\n",
+    "monthCount -= 1\n",
+    "\n",
     "\n",
     "months = [\"January\", \"Feburary\", \"March\", \"April\", \"May\", \"June\", \"July\", \"August\", \"September\", \"October\", \"November\", \"December\"]\n",
     "\n",
     "print(f\"Mrs A's account first became greater than $5000 on 1 {months[monthCount % 12]} {2001 + monthCount//12}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 1\n",
+    "\n",
+    "while (n/2)*(200+(n-1)*10) <= 5000:\n",
+    "    n += 1\n",
+    "\n",
+    "print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
