--- a/Exercises/Exercise-02-More-Input-For-While.ipynb
+++ b/Exercises/Exercise-02-More-Input-For-While.ipynb
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -273,6 +273,16 @@
       "When r = 4.1, sum of first 100 terms = 3.810876242278107e+100\n",
       "When r = 0.7, sum of first 100 terms = 3.937905450354042e+101\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nas n -> infinity,\\nr increases\\n'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -288,7 +298,12 @@
     "    for j in range(n):\n",
     "        total += first_term\n",
     "        first_term *= i\n",
-    "    print(f\"When r = {i}, sum of first {n} terms = {total}\")"
+    "    print(f\"When r = {i}, sum of first {n} terms = {total}\")\n",
+    "\n",
+    "\"\"\"\n",
+    "as n -> infinity,\n",
+    "r increases\n",
+    "\"\"\""
    ]
   },
   {
@@ -316,7 +331,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#YOUR CODE HERE"
+    "distance = 0\n",
+    "addition = 400\n",
+    "dayCount = 0\n",
+    "while distance < 200000:\n",
+    "    distance += addition\n",
+    "    addition += 400\n",
+    "    dayCount += 1\n",
+    "dayCount -= 1\n",
+    "\n",
+    "print(distance)"
    ]
   }
  ],
