--- a/Notes/Chapter_03_Data_Structures.ipynb
+++ b/Notes/Chapter_03_Data_Structures.ipynb
@@ -212,15 +212,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "hide-cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blackcurrant\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "nested_fruits = [\n",
+    "    ['Apple', 'Apricots', 'Avocado'], \n",
+    "    ['Banana', 'Blackcurrant', 'Blueberries'],\n",
+    "    ['Cherries', 'Cranberries', 'Custard-Apple']]\n",
+    "\n",
+    "print(nested_fruits[1][1])"
    ]
   },
   {
@@ -266,11 +279,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4]\n",
+      "[6, 7, 8, 9]\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "num = list(range(10))\n",
+    "print(num[2:5])\n",
+    "print(num[6:])"
    ]
   },
   {
@@ -288,15 +312,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "hide-cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4]\n",
+      "[5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
+    "num = list(range(10))\n",
+    "sub1 = num[:len(num)//2]\n",
+    "sub2 = num[len(num)//2:]\n",
+    "\n",
     "print(sub1)\n",
     "print(sub2)"
    ]
@@ -328,15 +365,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "tags": [
      "hide-cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7, 8, 9]\n",
+      "[0, 1, 2, 3, 4, 5, 6]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8]\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "num = list(range(10))\n",
+    "print(num[-3:])\n",
+    "print(num[:-3])\n",
+    "print(num[1:-1])\n",
+    "\n"
    ]
   },
   {
@@ -362,11 +413,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "num = list(range(10))\n",
+    "print(len(num))"
    ]
   },
   {
@@ -388,11 +448,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "0\n",
+      "45\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "num = list(range(10))\n",
+    "print(max(num))\n",
+    "print(min(num))\n",
+    "print(sum(num))"
    ]
   },
   {
@@ -408,15 +481,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "tags": [
      "hide-cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "min = 9, max = 0, sum = 45\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "num = list(range(10))\n",
+    "print(\"min = {}, max = {}, sum = {}\".format(max(num), min(num), sum(num)))"
    ]
   },
   {
@@ -444,12 +526,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "error"
    ]
   },
   {
@@ -470,11 +550,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<list_reverseiterator object at 0x107c44190>\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "jc = ['tmjc','vjc','tjc','yijc','acjc','njc','hci','asrjc','jpjc','rjc','cjc','mi','dhs','ejc','sajc','nyjc']\n",
+    "jc = list(reversed(jc))\n",
+    "print(jc)"
    ]
   },
   {
@@ -493,11 +583,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['nyjc', 'sajc', 'ejc', 'dhs', 'mi', 'cjc', 'rjc', 'jpjc', 'asrjc', 'hci', 'njc', 'acjc', 'yijc', 'tjc', 'vjc', 'tmjc']\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "jc = ['tmjc','vjc','tjc','yijc','acjc','njc','hci','asrjc','jpjc','rjc','cjc','mi','dhs','ejc','sajc','nyjc']\n",
+    "print(jc[::-1])"
    ]
   },
   {
@@ -535,11 +634,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['acjc', 'asrjc', 'cjc', 'dhs', 'ejc', 'hci', 'jpjc', 'mi', 'njc', 'nyjc', 'rjc', 'sajc', 'tjc', 'tmjc', 'vjc', 'yijc']\n",
+      "['yijc', 'vjc', 'tmjc', 'tjc', 'sajc', 'rjc', 'nyjc', 'njc', 'mi', 'jpjc', 'hci', 'ejc', 'dhs', 'cjc', 'asrjc', 'acjc']\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "jc = ['tmjc','vjc','tjc','yijc','acjc','njc','hci','asrjc','jpjc','rjc','cjc','mi','dhs','ejc','sajc','nyjc']\n",
+    "jc.sort()\n",
+    "print(jc)\n",
+    "jc.sort(reverse=True)\n",
+    "print(jc)"
    ]
   },
   {
@@ -2770,7 +2882,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2784,11 +2896,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.11.1"
   },
   "vscode": {
    "interpreter": {
-    "hash": "d4abd50234137fb60a8e52bcd12c63c8cbc1f26b32bc51c54dab6a2ee6deb43f"
+    "hash": "033afebc77ce116f8b4e5adc75a85edec4479cc7d7b8a0d9079b4c316c15d572"
    }
   }
  },
