--- a/Exercises/Exercise-02-More-Input-For-While.ipynb
+++ b/Exercises/Exercise-02-More-Input-For-While.ipynb
@@ -327,20 +327,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Day 494\n",
+      "Day 48\n",
+      "Day 15\n"
+     ]
+    }
+   ],
    "source": [
-    "distance = 0\n",
-    "addition = 400\n",
+    "distance = 2000\n",
     "dayCount = 0\n",
     "while distance < 200000:\n",
-    "    distance += addition\n",
-    "    addition += 400\n",
+    "    distance += 400\n",
     "    dayCount += 1\n",
     "dayCount -= 1\n",
+    "print(f\"Day {dayCount}\")\n",
     "\n",
-    "print(distance)"
+    "distance = 2000\n",
+    "dayCount = 0\n",
+    "while distance < 200000:\n",
+    "    distance *= 11/10\n",
+    "    dayCount += 1\n",
+    "dayCount -= 1\n",
+    "print(f\"Day {dayCount}\")\n",
+    "\n",
+    "distanceA = 2000\n",
+    "distanceB = 2000\n",
+    "addition = 400\n",
+    "dayCount = 1\n",
+    "while distanceB <= distanceA:\n",
+    "    dayCount += 1\n",
+    "    distanceA += 400\n",
+    "    distanceB *= 11/10\n",
+    "dayCount -= 1\n",
+    "print(f\"Day {dayCount}\")"
    ]
   }
  ],
