--- a/Exercises/Exercise-09-Program-Testing-and-Data-Validation.ipynb
+++ b/Exercises/Exercise-09-Program-Testing-and-Data-Validation.ipynb
@@ -177,11 +177,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.11.1"
   },
   "vscode": {
    "interpreter": {
-    "hash": "a42ccb73e7d9bfdf27e036f1d2b8b681e55fc0743cc5586bc2474d4a60f4b886"
+    "hash": "033afebc77ce116f8b4e5adc75a85edec4479cc7d7b8a0d9079b4c316c15d572"
    }
   }
  },
