--- a/Exercises/Exercise-02-More-Input-For-While.ipynb
+++ b/Exercises/Exercise-02-More-Input-For-While.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -93,29 +93,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "41\n",
+      "Your number is too high, Try again.\n",
       "Your number is too low, Try again.\n",
-      "Congratulations\n"
+      "Your number is too high, Try again.\n",
+      "Your number is too high, Try again.\n",
+      "Your number is too low, Try again.\n",
+      "Your number is too low, Try again.\n",
+      "Your number is too low, Try again.\n",
+      "Your number is too low, Try again.\n",
+      "Congratulations. You guessed correctly.\n"
      ]
     }
    ],
    "source": [
     "import random\n",
     "\n",
-    "secret = random.randint(1, 100)\n",
+    "secret = random.randint(1, 101)\n",
     "\n",
     "valueIn = 0\n",
     "\n",
     "while secret != valueIn:\n",
-    "    valueIn = int(input(\"Input a quantity\"))\n",
+    "    valueIn = int(input(\"Input a quantity: \"))\n",
     "    if secret > valueIn:\n",
     "        print(\"Your number is too low, Try again.\")\n",
     "    elif secret < valueIn:\n",
     "        print(\"Your number is too high, Try again.\")\n",
+    "\n",
     "print(\"Congratulations. You guessed correctly.\")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -133,7 +141,7 @@
     "- Request a numeric input from the user to be used as the first term.  Let us denote this input as `first_term`.\n",
     "- Request a numeric input from the user to be used as the common difference.  Let us denote this input as `common_ratio`.\n",
     "- Request an integer input from the user for the number of terms.  Let us denote this input as `number_of_terms`.\n",
-    "- Print out the sequence up to the $n$th term.\n",
+    "- Print out the sequence up to the $n$ th term.\n",
     "\n",
     "Example interaction: \n",
     "\n",
@@ -210,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -267,20 +275,20 @@
      "output_type": "stream",
      "text": [
       "When r = 2, sum of first 100 terms = 1267650600228229401496703205375\n",
-      "When r = 0.5, sum of first 100 terms = 2.535301200456459e+30\n",
-      "When r = -3, sum of first 100 terms = -1.2884438018300283e+47\n",
-      "When r = -0.8333333333333334, sum of first 100 terms = 2.8111500791399787e+47\n",
-      "When r = 4.1, sum of first 100 terms = 3.810876242278107e+100\n",
-      "When r = 0.7, sum of first 100 terms = 3.937905450354042e+101\n"
+      "When r = 0.5, sum of first 100 terms = 2.0\n",
+      "When r = -3, sum of first 100 terms = -128844380183002832759115282441405318175526880500\n",
+      "When r = -0.8333333333333334, sum of first 100 terms = 0.5454545388683595\n",
+      "When r = 4.1, sum of first 100 terms = 6.1238420156794096e+60\n",
+      "When r = 0.7, sum of first 100 terms = 3.3333333333333304\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'\\nas n -> infinity,\\nr increases\\n'"
+       "'\\nas n increase, r increases\\n'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,11 +297,11 @@
     "rValues = [2, 0.5, -3, -5/6, 4.1, 0.7]\n",
     "\n",
     "first_term = 1\n",
-    "common_ratio = 0\n",
     "n = 100\n",
     "total = 0\n",
     "\n",
     "for i in rValues:\n",
+    "    first_term = 1\n",
     "    total = 0\n",
     "    for j in range(n):\n",
     "        total += first_term\n",
@@ -301,8 +309,7 @@
     "    print(f\"When r = {i}, sum of first {n} terms = {total}\")\n",
     "\n",
     "\"\"\"\n",
-    "as n -> infinity,\n",
-    "r increases\n",
+    "as n increase, r increases\n",
     "\"\"\""
    ]
   },
@@ -327,45 +334,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Day 494\n",
-      "Day 48\n",
-      "Day 15\n"
+      "Day 28\n",
+      "Day 26\n",
+      "Day 21\n"
      ]
     }
    ],
    "source": [
-    "distance = 2000\n",
+    "distance = 0\n",
     "dayCount = 0\n",
     "while distance < 200000:\n",
-    "    distance += 400\n",
+    "    distance += 2000 + 400 * dayCount\n",
     "    dayCount += 1\n",
-    "dayCount -= 1\n",
     "print(f\"Day {dayCount}\")\n",
     "\n",
-    "distance = 2000\n",
+    "distance = 0\n",
     "dayCount = 0\n",
     "while distance < 200000:\n",
-    "    distance *= 11/10\n",
+    "    distance += 2000 * (11/10) ** dayCount\n",
     "    dayCount += 1\n",
-    "dayCount -= 1\n",
     "print(f\"Day {dayCount}\")\n",
     "\n",
-    "distanceA = 2000\n",
-    "distanceB = 2000\n",
-    "addition = 400\n",
-    "dayCount = 1\n",
+    "distanceA = 0\n",
+    "distanceB = 0\n",
+    "dayCount = 0\n",
     "while distanceB <= distanceA:\n",
+    "    distanceA += 2000 + dayCount * 400\n",
+    "    distanceB += 2000 * (11/10) ** dayCount\n",
+    "\n",
     "    dayCount += 1\n",
-    "    distanceA += 400\n",
-    "    distanceB *= 11/10\n",
-    "dayCount -= 1\n",
     "print(f\"Day {dayCount}\")"
    ]
   }
