--- a/Exercises/Exercise-03-List.ipynb
+++ b/Exercises/Exercise-03-List.ipynb
@@ -41,11 +41,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digit 0 : [32] : 1\n",
+      "Digit 1 : [1, 3] : 2\n",
+      "Digit 2 : [6, 16, 21, 28, 33] : 5\n",
+      "Digit 3 : [0, 9, 15, 17, 24, 25, 27] : 7\n",
+      "Digit 4 : [2, 19, 23] : 3\n",
+      "Digit 5 : [4, 8, 10, 31] : 4\n",
+      "Digit 6 : [7, 20, 22] : 3\n",
+      "Digit 7 : [13, 29] : 2\n",
+      "Digit 8 : [11, 18, 26, 34, 35] : 5\n",
+      "Digit 9 : [5, 12, 14, 30] : 4\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "a = [3, 1, 4, 1, 5, 9, 2, 6, 5, 3, 5, 8, 9, 7, 9, 3, 2, 3, 8, 4, 6, 2, 6, 4, 3, 3, 8, 3, 2, 7, 9, 5, 0, 2, 8, 8]\n",
+    "b = [[], [], [], [], [], [], [], [], [], []]\n",
+    "\n",
+    "for i in range(10):\n",
+    "    for j in range(len(a)):\n",
+    "        if a[j] == i:\n",
+    "            b[i].append(j)\n",
+    "\n",
+    "for i in range(len(b)):\n",
+    "    print(f\"Digit {i} : {b[i]} : {len(b[i])}\")"
    ]
   },
   {
@@ -72,11 +98,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The list of heights: [100, 120, 110, 130]\n",
+      "Minimum height is 100 cm, maximum height is 130 cm and the average height is 115.0 cm.\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "n = int(input(\"Number of heights to be entered: 4\"))\n",
+    "l = []\n",
+    "for i in range(n):\n",
+    "    l.append(int(input()))\n",
+    "print(f\"The list of heights: {l}\")\n",
+    "print(f\"Minimum height is {min(l)} cm, maximum height is {max(l)} cm and the average height is {sum(l)/len(l)} cm.\")"
    ]
   },
   {
@@ -126,6 +166,72 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For class 1:\n",
+      "U: [31, 39, 38, 31, 23, 33, 40] 7\n",
+      "S: [41, 41] 2\n",
+      "E: [46, 49] 2\n",
+      "D: [53] 1\n",
+      "C: [57, 56, 55, 55] 4\n",
+      "B: [60] 1\n",
+      "A: [74, 76, 80, 78, 98, 73, 88] 7\n",
+      "\n",
+      "For class 2:\n",
+      "U: [31, 39, 38, 31, 23, 33, 40, 11, 28, 36, 25, 25, 33, 27, 24, 20, 30, 7, 21] 19\n",
+      "S: [41, 41, 42, 44, 43, 44] 6\n",
+      "E: [46, 49, 48] 3\n",
+      "D: [53, 50, 54] 3\n",
+      "C: [57, 56, 55, 55] 4\n",
+      "B: [60, 69, 61] 3\n",
+      "A: [74, 76, 80, 78, 98, 73, 88, 95, 87, 70] 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gradeFinder(marks):\n",
+    "    grades = [\"A\", \"B\", \"C\", \"D\", \"E\", \"S\", \"U\"]\n",
+    "    marksLimit = [69, 59, 54, 49, 44, 40, -1]\n",
+    "    for i in range(len(marksLimit)):\n",
+    "        if marks > marksLimit[i]:\n",
+    "            return grades[i]\n",
+    "\n",
+    "mark_1 = [46, 41, 74, 53, 31, 39, 49, 57, 76, 80, 78, 38, 31, 56, 98, 55, 41, 73, 23, 88, 55, 60, 33, 40]\n",
+    "\n",
+    "mark_2 = [69, 48, 50, 95, 87, 11, 28, 36, 25, 70, 25, 54, 33, 42, 27, 24, 44, 20, 61, 43, 30, 44, 7, 21]\n",
+    "\n",
+    "marks1Sorted = marks2Sorted = {\n",
+    "    \"U\": [],\n",
+    "    \"S\": [],\n",
+    "    \"E\": [],\n",
+    "    \"D\": [],\n",
+    "    \"C\": [],\n",
+    "    \"B\": [],\n",
+    "    \"A\": [],\n",
+    "}\n",
+    "\n",
+    "for i in mark_1:\n",
+    "    marks1Sorted[gradeFinder(i)].append(i)\n",
+    "\n",
+    "print(\"For class 1:\")\n",
+    "for grades, values in marks1Sorted.items():\n",
+    "    print(f\"{grades}: {values} {len(values)}\")\n",
+    "\n",
+    "for i in mark_2:\n",
+    "    marks2Sorted[gradeFinder(i)].append(i)\n",
+    "\n",
+    "print(\"\\nFor class 2:\")\n",
+    "for grades, values in marks2Sorted.items():\n",
+    "    print(f\"{grades}: {values} {len(values)}\")"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -142,11 +248,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mr B's investment is worth $2441.41\n",
+      "If interest rate is applied hourly, his investment wil be worth $2718.13\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "months = 0\n",
+    "investment = 1000\n",
+    "while months != 12:\n",
+    "    months += 3\n",
+    "    investment *= 1.25\n",
+    "print(f\"Mr B's investment is worth ${round(investment, 2)}\")\n",
+    "\n",
+    "hours = 0\n",
+    "investment = 1000\n",
+    "while hours != 24 * 365:\n",
+    "    hours += 1\n",
+    "    investment *= 1 + (1 / (24 * 365))\n",
+    "print(f\"If interest rate is applied hourly, his investment wil be worth ${round(investment, 2)}\")"
    ]
   },
   {
@@ -177,6 +304,57 @@
     ">With 1% yearly interest rate with BOC SmartSaver, it will take ___ years for the money to double.<br>\n",
     "\n",
     "For each of the savings account, compare the number of years obtained in the earlier part with the number $\\frac{72}{100r}$, where $r$ is the yearly interest rate. What do you observe? Can you explain your observation?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "With 1% yearly interest rate with BOC SmartSaver, it will take 70 years for the money to double.\n",
+      "With 0.4% yearly interest rate with DBS Multiplier Account, it will take 174 years for the money to double.\n",
+      "With 0.5% yearly interest rate with UOB One Account, it will take 139 years for the money to double.\n",
+      "With 0.38% yearly interest rate with Standard Chartered Bonus$aver, it will take 183 years for the money to double.\n",
+      "With 0.55% yearly interest rate with OCBC 260 Account, it will take 127 years for the money to double.\n",
+      "For BOC SmartSaver, 72/100r = 0.72\n",
+      "For DBS Multiplier Account, 72/100r = 1.8\n",
+      "For UOB One Account, 72/100r = 1.44\n",
+      "For Standard Chartered Bonus$aver, 72/100r = 1.894736842105263\n",
+      "For OCBC 260 Account, 72/100r = 1.3090909090909089\n"
+     ]
+    }
+   ],
+   "source": [
+    "interestRates = {\n",
+    "    \"BOC SmartSaver\" : 1,\n",
+    "    \"DBS Multiplier Account\": 0.4,\n",
+    "    \"UOB One Account\": 0.5,\n",
+    "    \"Standard Chartered Bonus$aver\": 0.38,\n",
+    "    \"OCBC 260 Account\": 0.55\n",
+    "}\n",
+    "\n",
+    "for name, rate in interestRates.items():\n",
+    "\n",
+    "    balance = 1\n",
+    "    years = 0\n",
+    "\n",
+    "    while balance < 2:\n",
+    "        years += 1\n",
+    "        balance = balance + balance * (rate/100)\n",
+    "\n",
+    "    print(f\"With {rate}% yearly interest rate with {name}, it will take {years} years for the money to double.\")\n",
+    "\n",
+    "for name, rate in interestRates.items():\n",
+    "    print(f\"For {name}, 72/100r = {72 / (100 * rate)}\")\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "They are close approximations of the number of years / 100\n",
+    "\"\"\""
    ]
   },
   {
@@ -218,11 +396,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The list containing the first 5 terms of the arithmetic sequence are: \n",
+      "[2.0, 5.0, 8.0, 11.0, 14.0]\n",
+      "The list of the first 3 terms of the sequence is:\n",
+      "[2.0, 5.0, 8.0]\n",
+      "The list of the last 4 terms of the sequence is:\n",
+      "[5.0, 8.0, 11.0, 14.0]\n",
+      "The sum of all the terms in the sequence is:\n",
+      "40.0\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "first_term = float(input(\"Please input the first term in the arithmetic sequence: \"))\n",
+    "common_difference = float(input(\"Please input the common difference: \"))\n",
+    "number_of_terms = int(input(\"Please input the number of terms: \"))\n",
+    "\n",
+    "AS = [first_term + (i - 1) * common_difference for i in range(1, number_of_terms + 1)]\n",
+    "\n",
+    "print(f\"The list containing the first {number_of_terms} terms of the arithmetic sequence are: \")\n",
+    "print(AS)\n",
+    "\n",
+    "print(\"The list of the first 3 terms of the sequence is:\")\n",
+    "print(AS[:3])\n",
+    "\n",
+    "print(\"The list of the last 4 terms of the sequence is:\")\n",
+    "print(AS[-4:])\n",
+    "\n",
+    "print(\"The sum of all the terms in the sequence is:\")\n",
+    "print(sum(AS))\n",
+    "\n"
    ]
   }
  ],
