--- a/Exercises/Exercise-05-Function.ipynb
+++ b/Exercises/Exercise-05-Function.ipynb
@@ -116,7 +116,23 @@
     "#you can find the square root of a number x by using the expression math.sqrt(x)\n",
     "import math\n",
     "\n",
-    "#YOUR CODE HERE"
+    "def dot(a, b):\n",
+    "    return a[0] * b[0] + a[1] * b[1] + a[2] * b[2]\n",
+    "\n",
+    "def cross(a, b):\n",
+    "    return (a[1] * b[2] - a[2] * b[1], a[2] * b[0] - a[0] * b[2], a[0] * b[1] - a[1] * b[0])\n",
+    "\n",
+    "def vec_add(a, b):\n",
+    "    return (a[0] + b[0], a[1] + b[1], a[2] + b[2])\n",
+    "\n",
+    "def neg(a):\n",
+    "    return (-a[0], -a[1], -a[2])\n",
+    "\n",
+    "def mag(a):\n",
+    "    return (a[0]**2 + a[1]**2 + a[2]**2)**0.5\n",
+    "\n",
+    "def unit(a):\n",
+    "    return (a[0] / mag(a), a[1] / mag(a), a[2] / mag(a))"
    ]
   },
   {
@@ -162,6 +178,14 @@
    "source": [
     "#DO NOT DELETE THE IMPORT\n",
     "import math\n",
+    "\n",
+    "def scalar_times_vector(scalar, vector):\n",
+    "    vector\n",
+    "\n",
+    "\n",
+    "a = (2, 1, 1)\n",
+    "b = (-4, 3, 0)\n",
+    "\n",
     "\n",
     "#YOUR CODE HERE"
    ]
