--- a/Exercises/Exercise-04-Tuple.ipynb
+++ b/Exercises/Exercise-04-Tuple.ipynb
@@ -36,6 +36,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before swapping, x = 10, y = 20, z = 30\n",
+      "After swapping, x = 20, y = 30, z = 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = input(\"Enter the value for x: \")\n",
+    "y = input(\"Enter the value for y: \")\n",
+    "z = input(\"Enter the value for z: \")\n",
+    "\n",
+    "print(f\"Before swapping, x = {x}, y = {y}, z = {z}\")\n",
+    "\n",
+    "x, y, z = y, z, x\n",
+    "\n",
+    "print(f\"After swapping, x = {x}, y = {y}, z = {z}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -67,17 +93,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frac is 0.79\n",
+      "frac * 4 = 3.16\n",
+      "frac is 0.795\n",
+      "frac * 4 = 3.18\n",
+      "frac is 0.7876\n",
+      "frac * 4 = 3.1504\n",
+      "frac is 0.78672\n",
+      "frac * 4 = 3.14688\n"
+     ]
+    }
+   ],
    "source": [
     "#DO NOT DELETE THE FOLLOWING IMPORT\n",
     "import random\n",
     "import math\n",
     "\n",
-    "#TESTING THE METHODS UNIFORM AND SQRT\n",
-    "print(random.uniform(-1,1))\n",
-    "print(math.sqrt(2))"
+    "for n in [100, 1000, 10000, 100000]:\n",
+    "    \n",
+    "    coordinates = [(random.uniform(-1, 1), random.uniform(-1, 1)) for i in range(n)]\n",
+    "\n",
+    "    count = 0\n",
+    "\n",
+    "    for i in coordinates:\n",
+    "        d = math.sqrt(i[0] ** 2 + i[1] ** 2)\n",
+    "        if d <= 1:\n",
+    "            count += 1\n",
+    "\n",
+    "    print(f\"frac is {count/n}\")\n",
+    "    print(f\"frac * 4 = {count/n * 4}\")\n"
    ]
   },
   {
@@ -151,11 +202,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vectors: [(1.0, 2.0, 3.0), (4.0, 5.0, 6.0)]\n",
+      "addition: (1.0, 2.0, 3.0) + (4.0, 5.0, 6.0) = (5.0, 7.0, 9.0)\n",
+      "dot product: (1.0, 2.0, 3.0) • (4.0, 5.0, 6.0) = 32.0\n",
+      "cross product: (1.0, 2.0, 3.0) × (4.0, 5.0, 6.0) = (-3.0, 6.0, -3.0)\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "x1 = float(input(\"Enter the value for x1: \"))\n",
+    "y1 = float(input(\"Enter the value for y1: \"))\n",
+    "z1 = float(input(\"Enter the value for z1: \"))\n",
+    "x2 = float(input(\"Enter the value for x2: \"))\n",
+    "y2 = float(input(\"Enter the value for y2: \"))\n",
+    "z2 = float(input(\"Enter the value for z2: \"))\n",
+    "\n",
+    "vectors = [(x1, y1, z1), (x2, y2, z2)]\n",
+    "print(f\"vectors: {vectors}\")\n",
+    "\n",
+    "additionVector = (x1 + x2, y1 + y2, z1 + z2)\n",
+    "print(f\"addition: {vectors[0]} + {vectors[1]} = {additionVector}\")\n",
+    "\n",
+    "dotProductScalar = x1 * x2 + y1 * y2 + z1 * z2\n",
+    "print(f\"dot product: {vectors[0]} • {vectors[1]} = {dotProductScalar}\")\n",
+    "\n",
+    "crossProductVector = (y1 * z2 - z1 * y2, z1 * x2 - x1 * z2, x1 * y2 - y1 * x2)\n",
+    "print(f\"cross product: {vectors[0]} × {vectors[1]} = {crossProductVector}\")"
    ]
   }
  ],
